// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jeden startující 1`] = `
<div
  className="StartujiciProTyp-grid"
>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    7
  </div>
</div>
`;

exports[`třináct startujících 1`] = `
<div
  className="StartujiciProTyp-grid"
>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    7
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    4
  </div>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    16
  </div>
  <div
    className="StartujiciProTyp-nedokonceno"
    onClick={undefined}
  >
    25
  </div>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    9
  </div>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    15
  </div>
  <div
    className="StartujiciProTyp-nedokonceno"
    onClick={undefined}
  >
    1
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    8
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    59
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    43
  </div>
  <div
    className="StartujiciProTyp-nedokonceno"
    onClick={undefined}
  >
    42
  </div>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    33
  </div>
  <div
    className="StartujiciProTyp-nedokonceno"
    onClick={undefined}
  >
    21
  </div>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    24
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    27
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    22
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    30
  </div>
  <div
    className="StartujiciProTyp-dokonceno"
    onClick={[Function]}
  >
    23
  </div>
  <div
    className="StartujiciProTyp-na-trase"
    onClick={undefined}
  >
    26
  </div>
</div>
`;

exports[`žádný startující 1`] = `
<div
  className="StartujiciProTyp-grid"
/>
`;
